--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,12 @@
     border: 2px solid blue;
     padding: 1rem;
     text-align: center;
-
+}
+@media screen and (max-width: 480px){
+    .main-header{
+        border: 2px solid pink;
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 .main-name{
     color: blue;
@@ -18,20 +23,34 @@
     list-style-type: none;
 }
 
+.main-nav a{
+    margin: 1rem;
+}
+
+/* Body */
+
 .main-table{
     border: 2px solid blue;
     width: 100%;
     margin: 1rem 0 1rem 0;
     text-align: center;
 }
-
-
-
-
-
-
-
-
+.data-head-row{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.data-row{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.pizza-data-field{
+    padding: 2rem;
+}
+.price-data-field{
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
 .main-footer{
     border: 2px solid blue;
     text-align: center;
