--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
+:Root{
+    background-color: #c6c6c6;
+}
 .main-header{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
     border: 2px solid blue;
     padding: 1rem;
-    text-align: center;
+    justify-content: space-evenly;
 }
 @media screen and (max-width: 600px){
     .main-header{
-        grid-template-columns: repeat(1, 1fr);
+        flex-direction: column;
     }
 }
 .main-name{
@@ -15,9 +17,11 @@
     padding: 1rem;
 }
 .contact{
+    display: flex;
     justify-content: center;
-    padding: 2rem;
-    margin: 1rem;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
 }
 .main-nav a{
     margin: 1rem;
@@ -79,9 +83,23 @@
     display: flex;
     padding: 1rem;
     justify-content: space-evenly;
+    align-items: center;
     flex: 2;
     order: 2;
 }
+
+/* toppings section */
+
+@media screen and (max-width: 600px){
+    .toppings-section tbody tr{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .toppings-section .price-data-field{
+        flex-direction: row;        
+    }
+}
+
 
 /* footer */
 
@@ -92,6 +110,21 @@
     text-align: center;
     padding: 1rem;
 }
+.main-footer div{
+    align-self: center;
+    padding: 1rem;
+}
+.main-footer .footerinfo-two{
+    display: flex;
+    align-items: center;
+}
+.facebook-img{
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+
+}
+
 @media screen and (max-width: 600px){
     .main-footer{
         flex-direction: column;
