--- a/src/Extra_menu/Extra_menu.module.css
+++ b/src/Extra_menu/Extra_menu.module.css
@@ -2,8 +2,7 @@
     Border: 2px solid blue;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
     text-align: center;
     padding: 1rem;
     margin: 1rem 0 1rem 0;
@@ -12,4 +11,29 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+}
+.data_head_row{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.data_row{
+    display: flex;
+}
+
+.burger_data_field{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 2rem 1rem 2rem 1rem;
+    flex: 2;
+    order: 1;
+}
+.price_data_field{
+    display: flex;
+    padding: 1rem;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    flex: 2;
+    order: 2;
 }
