fix: css for main menu, fixed topping price and added more burgers

--- a/src/Extra_menu/Extra_menu.module.css
+++ b/src/Extra_menu/Extra_menu.module.css
@@ -5,7 +5,7 @@
     justify-content: space-evenly;
     text-align: center;
     padding: 1rem;
-    margin: 1rem 0 1rem 0;
+    margin: 1rem;
 }
 .menu_two p{
     display: flex;
