--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
 :Root{
     background-color: #c6c6c6;
 }
+*{  
+  margin: 0px;   
+}
 /* Body */
 
 .main-table{
+    display: flex;
+    flex-direction: column;
     border: 2px solid blue;
-    width: 100%;
-    margin: 1rem 0 1rem 0;
-    text-align: center;
+    margin: 1rem;
+    padding: 1rem;
 }
 @media screen and (max-width: 600px){
     .main-table{
@@ -25,28 +29,37 @@
     }
 }
 .data-head-row{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
 }
 .data-row{
     display: flex;
+    gap: 1rem;
 }
 
 .pizza-data-field{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 2rem 1rem 2rem 1rem;
+    align-items: center;
+    padding: 1rem;
     flex: 2;
     order: 1;
 }
 .price-data-field{
     display: flex;
-    padding: 1rem;
     justify-content: space-evenly;
     align-items: center;
+    padding: 1rem;
     flex: 2;
     order: 2;
+}
+
+.back_to{
+    display: flex;
+    justify-content: space-around;
+    padding: 1rem;
 }
 
 /* toppings section */
