--- a/src/Extra_menu/Extra_menu.module.css
+++ b/src/Extra_menu/Extra_menu.module.css
@@ -1,8 +1,7 @@
 .menu_one, .menu_two, .menu_three {
-    Border: 2px solid blue;
+    Border: 2px outset blue;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     text-align: center;
     padding: 1rem;
     margin: 1rem;
@@ -11,29 +10,28 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    padding: 1rem;
 }
 .data_head_row{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .data_row{
     display: flex;
 }
-
 .burger_data_field{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    padding: 2rem 1rem 2rem 1rem;
-    flex: 2;
+    padding: 1em;
+    flex: 1;
     order: 1;
 }
 .price_data_field{
     display: flex;
-    padding: 1rem;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
-    flex: 2;
+    padding: 1em;
+    flex: 1;
     order: 2;
 }
